test: add test cases for User.java & Movie.java